# LangChain-RAG-basics

./: README.md  ingestion.py  main.py  medium-blog.txt  pyproject.toml  retrieval.py
